# carefull

./: .gitignore  README.MD  carefull_ohs.md  database.md  ddl.txt  different-files.txt  main copy.py  main.py  only-in-bang-files.txt  only-in-main2-files.txt  requirements.txt  response-unify.diff  same-as-bang-files.txt  test.txt  데이터베이스 DDL.txt
auth/: register.py
raspberry/: .env.example  carefull.desktop  dev_watch.py  ecosystem.config.js  face_test.py  main copy.py  main.py  manage.ps1  pyproject.toml  recognition.md  requirements.txt  requirements_pc.txt  run.sh  test_face_auth.py
raspberry/api/: client.py
raspberry/auth/: authenticate.py  register.py
raspberry/behavior/: intake_detector.py  intake_yolo.py
raspberry/camera/: camera.py
raspberry/config/: settings.py
raspberry/db/: log_db.json  schedule.json  user_db.json
raspberry/face_detection/: mediapipe_detector.py
raspberry/face_recognition/: embedding.py  model_loader.py  similarity.py
raspberry/hardware/: Controller.py  SystemController.py  alarm.py  dispenser.py  fingerprint.py  gimbal.py  manager.py  motor.py
raspberry/md/: hardware.md  logic.md  result.md
raspberry/scheduler/: schedule.py
raspberry/scripts/: record.sh
raspberry/tests/: debug_servo.py  stepTest.py  test_alarm.py  test_behavior.py  test_camera.py  test_face_auth.py  test_face_auth_raw.py  test_fingerprint_auth.py  test_fingerprint_register.py  test_full_flow.py  test_gimbal.py  test_gimbal2.py  test_motor.py  test_mp_pose.py  test_schedule_notification.py
raspberry/ui/: app.py
raspberry/user_data/: user_001.json
(+199 files in other folders)
